<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context="io.android.projectx.presentation.features.areas.AreasFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include layout="@layout/view_bg_constraint_layout" />

        <TextView
            android:id="@+id/title"
            android:layout_width="0dip"
            android:layout_height="wrap_content"

            android:layout_marginStart="32dp"
            android:layout_marginTop="36dp"
            android:layout_marginEnd="32dp"

            android:fontFamily="@font/poppins_semibold"
            android:text="@string/title_screen_profile"
            android:textColor="@color/colorTextPrimary"
            android:textSize="28sp"
            android:textAlignment="viewStart"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:layout_width="0dip"
            android:layout_height="0dip"

            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="32dp"
            android:orientation="vertical"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title">

            <TextView
                android:id="@+id/titleName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginTop="32dp"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/title_full_name"
                android:textAlignment="viewStart"
                android:textColor="@color/colorTextPrimary"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/valueName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:fontFamily="@font/poppins"
                android:textColor="@color/colorTextPrimary"
                android:textSize="16sp"
                android:textAlignment="viewStart"

                tools:text="Ali Mohamed Ahmed Ali" />

            <TextView
                android:id="@+id/titleMobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginTop="32dp"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/title_mobile"
                android:textAlignment="viewStart"
                android:textColor="@color/colorTextPrimary"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/valueMobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:fontFamily="@font/poppins"
                android:textColor="@color/colorTextPrimary"
                android:textAlignment="viewStart"
                android:textSize="16sp"

                tools:text="+966542113528" />

            <TextView
                android:id="@+id/titleRole"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginTop="32dp"
                android:fontFamily="@font/poppins_semibold"
                android:textAlignment="viewStart"
                android:text="@string/title_role"
                android:textColor="@color/colorTextPrimary"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/valueRole"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:fontFamily="@font/poppins"
                android:textColor="@color/colorTextPrimary"
                android:textSize="16sp"
                android:textAlignment="viewStart"

                tools:text="Client" />

            <TextView
                android:id="@+id/titleCompany"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginTop="32dp"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/title_company"
                android:textAlignment="viewStart"
                android:textColor="@color/colorTextPrimary"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/valueCompany"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:fontFamily="@font/poppins"
                android:textColor="@color/colorTextPrimary"
                android:textSize="16sp"
                android:textAlignment="viewStart"

                tools:text="The United International for Transportation" />

        </LinearLayout>

        <ProgressBar
            android:id="@+id/progressbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:elevation="8dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>